--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.1",
+		"@types/jsonwebtoken": "^9.0.9",
 		"@types/node": "^22.13.14",
 		"nodemon": "^3.1.9",
 		"ts-node": "^10.9.2",
