--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@editorjs/editorjs": "^2.30.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.2",
     "@hookform/resolvers": "^5.0.1",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
+    "@mui/system": "^7.0.2",
+    "@mui/x-date-pickers": "^8.0.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.17",
     "@tiptap/extension-heading": "^2.11.7",
@@ -23,11 +31,16 @@
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "init": "^0.1.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.487.0",
+    "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
+    "react-datepicker": "^8.3.0",
+    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
