--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.9.2",
     "init": "^0.1.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
