feat: add Splide carousel for media display in PostCard component; update dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@mui/system": "^7.0.2",
     "@mui/x-date-pickers": "^8.0.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "@tailwindcss/vite": "^4.0.17",
     "@tiptap/extension-heading": "^2.11.7",
     "@tiptap/extension-image": "^2.11.7",
@@ -50,6 +52,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.6",
     "world-countries-capitals": "^3.4.0",
     "yup": "^1.6.1"
   },
@@ -57,6 +60,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/swiper": "^6.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
