--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,30 +35,38 @@
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
+    "cal-heatmap": "^4.2.4",
     "country-state-city": "^3.2.1",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.9.2",
+    "heatmap.js": "^2.0.5",
     "init": "^0.1.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "npm": "^11.3.0",
     "react": "^19.0.0",
+    "react-calendar-heatmap": "^1.10.0",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
+    "react-heatmap-calendar": "^1.0.1",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "swiper": "^11.2.6",
     "world-countries-capitals": "^3.4.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/heatmap.js": "^2.0.41",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/swiper": "^6.0.0",
@@ -69,6 +77,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
