--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^7.0.2",
     "@mui/system": "^7.0.2",
     "@mui/x-date-pickers": "^8.0.0",
+    "@nivo/line": "^0.96.0",
     "@radix-ui/react-slider": "^1.3.4",
     "@reduxjs/toolkit": "^2.6.1",
     "@splidejs/react-splide": "^0.7.12",
