feat: add chart.js and react-chartjs-2 for mood distribution visualization; implement EventChart component and update Dashboard to pass entries

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "cal-heatmap": "^4.2.4",
+    "chart.js": "^4.4.9",
     "country-state-city": "^3.2.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
@@ -50,6 +51,7 @@
     "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-calendar-heatmap": "^1.10.0",
+    "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.6.7",
