--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "axios": "^1.8.4",
     "cal-heatmap": "^4.2.4",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "country-state-city": "^3.2.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
