--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^1.9.0",
 		"bcryptjs": "^3.0.2",
 		"cloudinary": "^1.41.3",
 		"cookie-parser": "^1.4.7",
@@ -26,6 +27,7 @@
 		"multer-storage-cloudinary": "^4.0.0"
 	},
 	"devDependencies": {
+		"@types/axios": "^0.14.4",
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^5.0.1",
