--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "cal-heatmap": "^4.2.4",
     "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
@@ -71,6 +71,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/axios": "^0.14.4",
     "@types/heatmap.js": "^2.0.41",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
