--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "cal-heatmap": "^4.2.4",
     "chart.js": "^4.4.9",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
