--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,6 +67,7 @@
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.3",
     "swiper": "^11.2.6",
+    "tailwind-scrollbar": "^4.0.2",
     "world-countries-capitals": "^3.4.0",
     "yup": "^1.6.1"
   },
@@ -83,9 +84,9 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "postcss": "^8.5.3",
+    "postcss": "^8.5.4",
     "rollup-plugin-node-polyfills": "^0.2.1",
-    "tailwindcss": "^4.0.17",
+    "tailwindcss": "^4.1.8",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
