--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "react-router-dom": "^7.4.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.28.1",
+    "react-virtuoso": "^4.12.8",
     "recharts": "^2.15.3",
     "swiper": "^11.2.6",
     "tailwind-scrollbar": "^4.0.2",
